@@ -2,7 +2,7 @@ if COND_APUSERGROUP
   DEFINE_USERGROUP = -DSUPHP_USE_USERGROUP
 endif
 
-AM_CFLAGS=-I@APXS_INCLUDEDIR@ @APXS_EXTRA_CFLAGS@
+AM_CFLAGS=-I@APXS_INCLUDEDIR@ -I@APR_INCLUDEDIR@ @APXS_EXTRA_CFLAGS@
 AM_CFLAGS+=-DSUPHP_PATH_TO_SUPHP=\"${sbindir}/suphp\" $(DEFINE_USERGROUP)
 
 noinst_LTLIBRARIES = mod_suphp.la
